# berkeley

./: .gitignore  README.md  hand_position.txt  pyproject.toml
Berkeley_Stepper/: platformio.ini
Berkeley_Stepper/src/: main.cpp
api/: main.py  pyproject.toml
backend/: README.md  pyproject.toml
backend/src/backend/: __main__.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/dashboard/alerts/: page.tsx
frontend/app/dashboard/history/: page.tsx
frontend/app/dashboard/settings/: page.tsx
voice-agent/: README.md  hello.py  pyproject.toml
voice-agent/src/voice_agent/: __main__.py
